--- a/history
+++ b/history
@@ -1,60 +1,43 @@
-    1  git clone https://github.com/Anilchowdari/git_repo C:\Git
-    2  git clone http://github.com/Anilchowdari/git_repo C:\Git
-    3  git config --global http.proxy web-proxy.ind.hp.com:8080
-    4  git clone http://github.com/Anilchowdari/git_repo C:\Git
-    5  git status
-    6  cd c:/Git
-    7  git status
-    8  git clone http://github.com/Anilchowdari/git_repo C:\Git
-    9  cd c:Git/
-   10  pwd
-   11  touch sample.c
-   12  git add sample.c
-   13  ls -ltr
-   14  git add sample.c
-   15  git status
-   16  cd C:\Git\Git
-   17  cd /c/Git/Git/
-   18  touch sample.c
-   19  git add sample.c
-   20  git README
-   21  touch README
-   22  git add README
-   23  git status
-   24  vi sample.c 
-   25  vi README
-   26  git commit -m "initial version"
-   27  git status
-   28  git push
-   29  git status
-   30  git commit -m "initial version1"
-   31  git add sample.c
-   32  git status
-   33  git add README
-   34  git status
-   35  git commit -m "initial version 1"
-   36  git log
-   37  git status
-   38  touch test.c
-   39  git status
-   40  git add test.c
-   41  git status
-   42  ls -ltr
-   43  git reset HEAD test.c
-   44  ls -ltr
-   45  git status
-   46  git add test.c
-   47  git status
-   48  vi README
-   49  git status
-   50  vi sample.c 
-   51  git status
-   52  git add README
-   53  git status
-   54  vi README
-   55  git status
-   56  git diff
-   57  git commit
-   58  git lod
-   59  git log
-   60  history >history
+    1  pwd
+    2  cd ..
+    3  cd
+    4  pwd
+    5  cd ..
+    6  cd ..
+    7  cd ..
+    8  pwd
+    9  cd c:/git_repo
+   10  ls -l
+   11  git status
+   12  git log --stst
+   13  git log --cached
+   14  git diff --cached
+   15  git log --pretty
+   16  git log --pretty=short
+   17  git log --pretty=full
+   18  git log --since=2.weeks
+   19  git log --since=5.months
+   20  git log -3
+   21  git log -5
+   22  git log --committer
+   23  git log --author
+   24  git log --author Anil
+   25  git log --author Initial
+   26  git log --committer Initial
+   27  git log --committer initial
+   28  git log --committer Hello
+   29  git log --committer initial version
+   30  git log --committer "initial version"
+   31  git log --graph
+   32  gitk
+   33  git commit --amend
+   34  git log
+   35  git commit -m "initial commit"
+   36  git add README.txt
+   37  git add sample.c
+   38  git commit --amend
+   39  git commit -m "initial commit"
+   40  git add sample.c
+   41  git commit --amend
+   42  vi sample.c 
+   43  history > history 
